--- a/style.css
+++ b/style.css
@@ -70,4 +70,10 @@ body{
   justify-content: center;
   background-color: peachpuff;
 }
-
+.back-space{
+  font-size: 62px;
+  color: rgb(139, 11, 11);
+ display: flex;
+ align-items: center;
+ justify-content: center;
+}
